fixing wrong position of error page causing some pages to have their routes not found

--- a/src/pages/page-not-found/error-404.styles.scss
+++ b/src/pages/page-not-found/error-404.styles.scss
@@ -26,8 +26,9 @@
     img {
         width: 95%;
         max-width: 80rem;
-        height: 32rem;
+        height: 30rem;
         margin-bottom: 2rem;
+        object-fit: contain;
 
         @media (min-width: 750px){
             height: 40rem;
